test/compile-errors/record-privacy-a.crow
main void()
	()

private-ctor record -new
	x nat

redundant-private-ctor record -new
	-y nat

private-mut record mut, +new
	-j mut nat
	k .mut nat
	-l .mut nat
